# cmaketpl

./: .gitignore  CMakeLists.txt  config.cmake.example  configure
.cmake/: CustomUtils.cmake
documents/: README.md
examples/: README.md  configure
examples/Example1/: CMakeLists.txt  example1.cpp
examples/Example2/: CMakeLists.txt
examples/example1/: CMakeLists.txt
examples/example2/: CMakeLists.txt  example2.cpp
sources/Application/: CMakeLists.txt
sources/MyApp/: CMakeLists.txt  MyApp.cpp
sources/MyLib/: CMakeLists.txt  Config.hpp.in
sources/MyLib/include/MyLib/: MyLib.hpp
sources/MyLib/src/: MyLib.cpp
tests/BaseTest/: CMakeLists.txt  add.cpp
tests/CommonTest/: CMakeLists.txt
tests/base/: CMakeLists.txt  add.cpp  edit.cpp  remove.cpp
tests/common/: CMakeLists.txt  list.cpp
